--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
   "name": "mc-angular",
-  "version": "1.1.0",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-karma": "~0.8.2",
-    "grunt-ng-annotate": "^0.3.2",
-    "karma": "~0.12.3",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "^0.2.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.1"
-  },
-  "engines": {
-    "node": ">=0.8.0"
-  },
+  "version": "2.0.0",
   "scripts": {
-    "test": "grunt test"
+    "test": "cross-env NODE_ENV=test karma start --single-run",
+    "start": "cp -r static/. build && webpack-dev-server --progress --colors --port 3000 --host 0.0.0.0 --content-base build/",
+    "build": "cross-env NODE_ENV=production webpack && cp -r static/. build",
+    "package": "mkdir -p dist && bestzip dist/bundle.zip build/*"
+  },
+  "dependencies": {
+    "axios": "0.15.3",
+    "react": "15.4.2",
+    "react-dom": "15.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.22.0",
+    "bestzip": "1.1.3",
+    "chai": "3.5.0",
+    "cross-env": "3.1.4",
+    "karma": "1.4.1",
+    "karma-chai": "0.1.0",
+    "karma-coverage": "1.1.1",
+    "karma-junit-reporter": "1.2.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.1",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-webpack": "2.0.2",
+    "mocha": "3.2.0",
+    "phantomjs-prebuilt": "2.1.14",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0"
   }
 }
